--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.analysis.typeCheckingMode": "off",
     "python.autoComplete.addBrackets": true,
     "python.autoComplete.addCallParenthesis": true,
-    "python.pythonPath": "/home/zhu/anaconda3/envs/py_env3.8/bin/python"
+    "python.pythonPath": "/home/zhu/anaconda3/envs/py_env3.8/bin/python",
+    "python.analysis.completeFunctionParens": true
 }
